# Nvim-Config

./: README.md  lazy-lock.json  lazyvim.json
lua/config/: autocmds.lua  functionality.lua  keymaps.lua  lazy.lua  neovide.lua  options.lua
lua/config/keymaps/: insert-mode.lua  normal-mode.lua  terminal.lua  visual-mode.lua  visual-normal-mode.lua
lua/plugins/: aerial.lua  amongus-nvim.lua  avante.lua  barbar.lua  blink.lua  buffon-nvim.lua  builder-nvim.lua  catppuccin.lua  cmake.lua  codecompanion.lua  codediff.lua  compiler-explorer.lua  copilot.lua  copilotchat.lua  coq_nvim.lua  demicolon.lua  disableDoubles.lua  disabled.lua  editable-term.lua  example.md  flash.lua  focus-nvim.lua  fold-diagnostics.lua  foldsings-nvim.lua  fugit2.lua  gitstatus.lua  guess-indent.lua  hydra.lua  indent-blankline.lua  indent-compute.lua  inline-cmd.lua  kanagawa-paper.lua  kanagawa.lua  lazyvim.lua  line-repeat.lua  litee-nvim.lua  lspconfig.lua  lua-mundo.lua  luapad.lua  marks.lua  (+53 more)
queries/bison/: injections.scm
skeleton/: -.cpp  -.vue  CMakeLists.txt  CMakePresets.json  Rakefile
